# CurriculumAI

./: .gitignore  README.md  ai.py  authenticate.py  create_job.py  download_cv.py  helper.py  pyproject.toml
analyze/: analise.py  app.py  create_job.py  database.py
analyze/models/: job.py
